addons/k8s-gatekeeper/templates/medtech-log_retention_for_clinical_events-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: medtech-log_retention_for_clinical_events
  annotations:
    rulehub.id: medtech.log_retention_for_clinical_events
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: MedtechLog_retention_for_clinical_eventsConstraint
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            enabled:
              type: boolean
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package rulehub.medtech.log_retention_for_clinical_events
      import future.keywords.if

      default deny = []

      # Example: deny with a message
      deny[msg] {
        input.review.kind.kind == "Deployment"
        msg := "medtech.log_retention_for_clinical_events: example violation"
      }
